--- a/data/rush/yugipedia1044915.yaml
+++ b/data/rush/yugipedia1044915.yaml
@@ -52,7 +52,7 @@ sets:
   - set_number: RD/KP17-JP007
     set_name: Burst Rex of Awakening
     rarities:
-    - Common
+    - Rare
 is_translation_unofficial:
   name:
     en: true
