--- a/data/rush/yugipedia1051258.yaml
+++ b/data/rush/yugipedia1051258.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. If you sent a Spellcaster Type monster to the Graveyard by this effect, this turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a DARK Attribute Spellcaster Type monster in Attack Position.
+    Send the top card of your Deck to the Graveyard. Then, if you sent a Spellcaster Type monster to the Graveyard by this effect, this turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a DARK Attribute Spellcaster Type monster in Attack Position.
   de:
   es:
   fr:
