--- a/rush.yaml
+++ b/rush.yaml
@@ -136308,7 +136308,7 @@ sets:
   - set_number: RD/KP17-JP007
     set_name: Burst Rex of Awakening
     rarities:
-    - Common
+    - Rare
 is_translation_unofficial:
   name:
     en: true
@@ -138681,7 +138681,7 @@ images:
   image: HybridriveRestruct-RDKP17-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP17-JP054
+  - set_number: RD/KP17-JP053
     set_name: Burst Rex of Awakening
     rarities:
     - Common
@@ -138720,7 +138720,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The attacking monster loses 1600 ATK until the end of this turn. Then, if you returned 2 different Types to meet the requirement, you can destroy 1 face-up Level 9 or lower monster on your opponent's field.
+    The attacking monster loses 1600 ATK until the end of this turn. Then, if you shuffled 2 different Types to meet the requirement, you can destroy 1 face-up Level 9 or lower monster on your opponent's field.
   de:
   es:
   fr:
@@ -138778,7 +138778,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. If you sent a Spellcaster Type monster to the Graveyard by this effect, this turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a DARK Attribute Spellcaster Type monster in Attack Position.
+    Send the top card of your Deck to the Graveyard. Then, if you sent a Spellcaster Type monster to the Graveyard by this effect, this turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a DARK Attribute Spellcaster Type monster in Attack Position.
   de:
   es:
   fr:
