--- a/data/rush/yugipedia1050691.yaml
+++ b/data/rush/yugipedia1050691.yaml
@@ -52,6 +52,7 @@ sets:
   - set_number: RD/ORP2-JP071
     set_name: Over Rush Pack 2
     rarities:
+    - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
