--- a/rush.yaml
+++ b/rush.yaml
@@ -138502,6 +138502,7 @@ sets:
   - set_number: RD/ORP2-JP071
     set_name: Over Rush Pack 2
     rarities:
+    - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
