--- a/data/cards/kdb19092.yaml
+++ b/data/cards/kdb19092.yaml
@@ -62,7 +62,7 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 10276
 fake_password: 10000100
