--- a/data/cards/90219263.yaml
+++ b/data/cards/90219263.yaml
@@ -8,9 +8,9 @@ name:
   it: Egotista Elegante
   pt: Egotista Elegante
   ja: <ruby>万<rt>まん</rt></ruby><ruby>華<rt>げ</rt></ruby><ruby>鏡<rt>きょう</rt></ruby>－<ruby>華<rt>か</rt></ruby><ruby>麗<rt>れい</rt></ruby>なる<ruby>分<rt>ぶん</rt></ruby><ruby>身<rt>しん</rt></ruby>－
-  ja_romaji: Mangekyō - Kareinaru Bunshin -
+  ja_romaji: Mangekyō -Kareinaru Bunshin-
   ko: 만화경 －화려한 분신－
-  ko_rr: Manhwagyeong - Hwaryeohan Bunsin
+  ko_rr: Manhwagyeong -Hwaryeohan Bunsin-
   zh-TW: 萬花筒－華麗分身－
   zh-CN: 万华镜－华丽的分身－
 text:
