--- a/data/cards/yugipedia1051372.yaml
+++ b/data/cards/yugipedia1051372.yaml
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    契約者に幸運をもたらすとされる、ガラス瓶に宿るカワイイ奴。その蓋は絶対に開けてはならない。どんな事が起ころうと絶対に・・・。
   ko:
   zh-TW:
   zh-CN:
