--- a/data/cards/29280200.yaml
+++ b/data/cards/29280200.yaml
@@ -9,7 +9,7 @@ name:
   pt: Alma Aniquiladora Dra. Louco Amor
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> <ruby>Ｄｒ．<rt>ドクター</rt></ruby>マッドラヴ
   ja_romaji: Vankisshu Souru Dokutā Maddoravu
-  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> Dr.매드라브
+  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> <ruby>Dr<rt>닥터</rt></ruby>.매드라브
   ko_rr: Baengkisi Soul Dakta Maedeurabeu
   zh-TW: 對擊鬥魂 狂戀博士
   zh-CN: 对击斗魂 狂恋博士
