--- a/data/cards/54423935.yaml
+++ b/data/cards/54423935.yaml
@@ -9,7 +9,7 @@ name:
   pt: Replica Ataqueraptor
   ja: <ruby>Ｒ・Ｒ・Ｒ<rt>レイド・ラプターズ・レプリカ</rt></ruby>
   ja_romaji: Reido Raputāzu Repurika
-  ko: '{R·R·R(레이드 랩터즈 레플리카}'
+  ko: <ruby>R·R·R<rt>레이드 랩터즈 레플리카</rt></ruby>
   ko_rr:
   zh-TW: 急襲猛禽 複製品
   zh-CN: 急袭猛禽复制品
