--- a/data/cards/55688914.yaml
+++ b/data/cards/55688914.yaml
@@ -9,7 +9,7 @@ name:
   pt: Alma Aniquiladora Pluton HG
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> プルトン<ruby>Ｈ<rt>エイチ</rt></ruby><ruby>Ｇ<rt>ジー</rt></ruby>
   ja_romaji: Vankisshu Souru Puruton Eichi Jī
-  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> 플루톤HG
+  ko: <ruby>VS<rt>뱅키시 소울</rt></ruby> 플루톤<ruby>HG<rt>에이치지</rt></ruby>
   ko_rr: Baengkisi Soul Peulluton Heichi Ji
   zh-TW: 對擊鬥魂 普路托HG
   zh-CN: 对击斗魂 普路托HG
