--- a/data/cards/14258627.yaml
+++ b/data/cards/14258627.yaml
@@ -54,6 +54,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Destruction'
     rarities:
     - Common
+    - Secret Rare
   de:
   - set_number: ANPR-DE094
     set_name: Ancient Prophecy
