--- a/data/cards/36042004.yaml
+++ b/data/cards/36042004.yaml
@@ -81,6 +81,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Destruction'
     rarities:
     - Common
+    - Secret Rare
   de:
   - set_number: POTD-DE022
     set_name: Power of the Duelist
