--- a/data/cards/49010598.yaml
+++ b/data/cards/49010598.yaml
@@ -75,6 +75,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Destruction'
     rarities:
     - Common
+    - Secret Rare
   de:
   - set_number: RDS-DE050
     set_name: Rise of Destiny
