--- a/data/cards/89312388.yaml
+++ b/data/cards/89312388.yaml
@@ -84,6 +84,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Destruction'
     rarities:
     - Common
+    - Secret Rare
   de:
   - set_number: GLD3-DE014
     set_name: Gold Series 3
