--- a/data/cards/64599569.yaml
+++ b/data/cards/64599569.yaml
@@ -34,7 +34,7 @@ text:
     Deve ser Invocado por Invocação-Fusão. Se este card for Invocado por Invocação-Fusão: envie todos os outros cards que você controla para o Cemitério. O ATK/DEF originais deste card se tornam iguais ao número de Matérias de Fusão usadas para sua Invocação-Fusão x 800. A cada Fase de Batalha, este card pode atacar os monstros do seu oponente um número de vezes até o número de Matérias de Fusão usadas para sua Invocação-Fusão.
   ja: |-
     「サイバー・ドラゴン」＋機械族モンスター１体以上
-    このカードは融合召喚でしか特殊召喚できない。①：このカードが融合召喚に成功した場合に発動する。このカード以外の自分フィールドのカードを全て墓地へ送る。②：このカードの元々の攻撃力・守備力は、このカードの融合素材としたモンスターの数×８００になる。③：このカードは１度のバトルフェイズ中に、このカードの融合素材としたモンスターの数まで相手モンスターに攻撃できる。
+    このカードは融合召喚でしか特殊召喚できない。①：このカードが融合召喚した場合に発動する。自分フィールドの他のカードを全て墓地へ送る。②：このカードの元々の攻撃力・守備力は、このカードの融合素材としたモンスターの数×８００になる。③：このカードは１度のバトルフェイズ中に、このカードの融合素材としたモンスターの数までモンスターに攻撃できる。
   ko: |-
     "사이버 드래곤" ＋ 기계족 몬스터 1장 이상
     이 카드는 융합 소환으로밖에 특수 소환할 수 없다. ①: 이 카드가 융합 소환에 성공했을 경우에 발동한다. 이 카드 이외의 자신 필드의 카드를 전부 묘지로 보낸다. ②: 이 카드의 원래의 공격력 / 수비력은, 이 카드의 융합 소재로 한 몬스터의 수 × 800 이 된다. ③: 이 카드는 1번의 배틀 페이즈 중에, 이 카드의 융합 소재로 한 몬스터의 수까지 상대 몬스터에 공격할 수 있다.
