--- a/data/cards/23626223.yaml
+++ b/data/cards/23626223.yaml
@@ -94,6 +94,10 @@ sets:
     set_name: Crossed Souls
     rarities:
     - Common
+  - set_number: 24TP-JP210
+    set_name: Tournament Pack 2024 Vol.2
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: CROS-KR078
     set_name: Crossed Souls
