--- a/data/cards/41721210.yaml
+++ b/data/cards/41721210.yaml
@@ -111,6 +111,10 @@ sets:
     set_name: Extra Pack 2018
     rarities:
     - Ultra Rare
+  - set_number: 24TP-JP205
+    set_name: Tournament Pack 2024 Vol.2
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RC02-KR001
     set_name: Rarity Collection 20th Anniversary Edition
