--- a/data/cards/44822037.yaml
+++ b/data/cards/44822037.yaml
@@ -92,6 +92,10 @@ sets:
     set_name: Blazing Vortex
     rarities:
     - Rare
+  - set_number: 24TP-JP211
+    set_name: Tournament Pack 2024 Vol.2
+    rarities:
+    - Secret Rare
   ko:
   - set_number: BLVO-KR079
     set_name: Blazing Vortex
