--- a/data/cards/50383626.yaml
+++ b/data/cards/50383626.yaml
@@ -88,6 +88,10 @@ sets:
     set_name: 'Structure Deck R: Curse of the Dark'
     rarities:
     - Ultra Rare
+  - set_number: 24TP-JP204
+    set_name: Tournament Pack 2024 Vol.2
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: SR06-KR001
     set_name: 'Structure Deck R: Curse of the Dark'
