--- a/data/cards/63995093.yaml
+++ b/data/cards/63995093.yaml
@@ -283,6 +283,10 @@ sets:
     set_name: "Structure Deck: Cyber Style's Successor"
     rarities:
     - Common
+  - set_number: 24TP-JP208
+    set_name: Tournament Pack 2024 Vol.2
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RDS-KR041
     set_name: Rise of Destiny
