--- a/data/cards/64043465.yaml
+++ b/data/cards/64043465.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: Prismatic God Box
     rarities:
     - Millennium Rare
+  - set_number: 24TP-JP209
+    set_name: Tournament Pack 2024 Vol.2
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: MB01-KR003
     set_name: Millennium Deck
