--- a/data/cards/97651498.yaml
+++ b/data/cards/97651498.yaml
@@ -105,6 +105,10 @@ sets:
     set_name: Duel Terminal Chronicle 2 - Chapter of Chaos
     rarities:
     - Duel Terminal Normal Parallel Rare
+  - set_number: 24TP-JP203
+    set_name: Tournament Pack 2024 Vol.2
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: HA02-KR031
     set_name: Hidden Arsenal 2
