--- a/data/cards/81519836.yaml
+++ b/data/cards/81519836.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: 24TP-JP202
+    set_name: Tournament Pack 2024 Vol.2
+    rarities:
+    - Super Parallel Rare
   ko:
   - set_number: DABL-KR026
     set_name: Darkwing Blast
