--- a/data/rush/18585.yaml
+++ b/data/rush/18585.yaml
@@ -44,6 +44,10 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
+  - set_number: RD/ORP2-JP066
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP12-KR003
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
