--- a/data/rush/18701.yaml
+++ b/data/rush/18701.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: Tournament Battle July 2023 prize card
     rarities:
     - Ultra Parallel Rare
+  - set_number: RD/ORP2-JP078
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/LGP1-KR024
     set_name: Legend Awakening Pack
