--- a/rush.yaml
+++ b/rush.yaml
@@ -91937,6 +91937,10 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
+  - set_number: RD/ORP2-JP066
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP12-KR003
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
@@ -98620,6 +98624,10 @@ sets:
     set_name: Tournament Battle July 2023 prize card
     rarities:
     - Ultra Parallel Rare
+  - set_number: RD/ORP2-JP078
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/LGP1-KR024
     set_name: Legend Awakening Pack
