--- a/data/cards/01557499.yaml
+++ b/data/cards/01557499.yaml
@@ -36,6 +36,8 @@ text:
     天使族怪兽才能装备。装备怪兽的攻击力·守备力上升300。
 card_type: Spell
 property: Equip
+series:
+- Type Booster
 images:
 - index: 1
   image: SilverBowandArrow-LOB-EN-C-UE-25thAnniversaryEdition.png
