--- a/data/rush/19556.yaml
+++ b/data/rush/19556.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack while you have "Straynge Cat" or "Furtunate Cat" in your Graveyard, or when an opponent's monster declares an attack targeting a face-up monster with 0 ATK.
+    When an opponent's monster declares an attack, while you have "Straynge Cat" or "Furtunate Cat" in your Graveyard, or targeting a face-up monster with 0 ATK.
   de:
   es:
   fr:
