--- a/data/cards/15052462.yaml
+++ b/data/cards/15052462.yaml
@@ -41,6 +41,8 @@ text:
     不死族才能装备。1只装备怪兽的攻击力和守备力上升300。
 card_type: Spell
 property: Equip
+series:
+- Type Booster
 images:
 - index: 1
   image: VioletCrystal-LOB-EN-C-UE-25thAnniversaryEdition.png
