--- a/data/cards/39774685.yaml
+++ b/data/cards/39774685.yaml
@@ -36,6 +36,8 @@ text:
     植物族才能装备。1只装备怪兽的攻击力和守备力上升300。
 card_type: Spell
 property: Equip
+series:
+- Type Booster
 images:
 - index: 1
   image: VileGerms-LOB-EN-C-UE-25thAnniversaryEdition.png
