--- a/data/cards/61854111.yaml
+++ b/data/cards/61854111.yaml
@@ -36,6 +36,8 @@ text:
     战士族才能装备。1只装备怪兽的攻击力和守备力上升300。
 card_type: Spell
 property: Equip
+series:
+- Type Booster
 images:
 - index: 1
   image: LegendarySword-LOB-EN-C-UE-25thAnniversaryEdition.png
