--- a/data/cards/77007920.yaml
+++ b/data/cards/77007920.yaml
@@ -36,6 +36,8 @@ text:
     昆虫族怪兽才能装备。装备怪兽的攻击力·守备力上升300。
 card_type: Spell
 property: Equip
+series:
+- Type Booster
 images:
 - index: 1
   image: LaserCannonArmor-LOB-EN-C-UE-25thAnniversaryEdition.png
