--- a/data/cards/yugipedia1042408.yaml
+++ b/data/cards/yugipedia1042408.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Dragon of Soul and Pride
+  en: Dragon of Pride and Soul
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ atk: 2500
 def: 2500
 images:
 - index: 1
-  image: DragonofSoulandPride-INFO-JP-OP.png
+  image: DragonofPrideandSoul-INFO-JP-OP.png
 sets:
   en:
   - set_number: INFO-EN000
@@ -79,8 +79,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1042408
