--- a/data/rush/yugipedia1050691.yaml
+++ b/data/rush/yugipedia1050691.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>冠<rt>かん</rt></ruby><ruby>狙<rt>そ</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>姫<rt>き</rt></ruby>トロンボウ
-  ja_romaji: Kanso Gakki Toronbou
+  ja_romaji: Kansogakki Toronbou
   ko:
   ko_rr:
   zh-TW:
