--- a/rush.yaml
+++ b/rush.yaml
@@ -138465,7 +138465,7 @@ name:
   it:
   pt:
   ja: <ruby>冠<rt>かん</rt></ruby><ruby>狙<rt>そ</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>姫<rt>き</rt></ruby>トロンボウ
-  ja_romaji: Kanso Gakki Toronbou
+  ja_romaji: Kansogakki Toronbou
   ko:
   ko_rr:
   zh-TW:
@@ -139140,3 +139140,285 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1052000
+---
+konami_id:
+name:
+  en: Love Million
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・ミリオン
+  ja_romaji: Ravu Mirion
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack targeting your face-up Fairy Type monster with 0 original ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The attacking monster loses 1,000,000 ATK until the end of this turn. Then, if you have a face-up monster with 0 DEF on your field, the attack target gains 100 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Love
+images:
+- index: 1
+  image: LoveMillion-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP053
+    set_name: Over Rush Pack 2
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1052172
+---
+konami_id:
+name:
+  en: Love Wolf
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・ウルフ
+  ja_romaji: Ravu Urufu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card, reveal 1 Fairy Type monster with 0 ATK in your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change the battle position of 1 face-up monster on your field or 1 monster on your opponent's field. Then, you can add 1 "Love Protection" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: EARTH
+level: 2
+atk: 0
+def: 1400
+series:
+- Love
+images:
+- index: 1
+  image: LoveWolf-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP046
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1052173
+---
+konami_id:
+name:
+  en: Over Rush Storm
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: オーバーラッシュ・ストーム
+  ja_romaji: Ōbā Rasshu Sutōmu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 2 monsters from your Graveyard on the bottom of your Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Place 1 Spell/Trap Card from your opponent's field on the bottom of the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: OverRushStorm-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP077
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1052174
+---
+konami_id:
+name:
+  en: Strange Attractor
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ストレンジ・アトラクター
+  ja_romaji: Sutorenji Atorakutā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 Cyberse Type monster from your hand to the Graveyard, or shuffle 5 Cyberse Type monsters with different Levels from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 2 cards. You cannot activate monster effects until the end of this turn, except Cyberse Type monsters'.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: StrangeAttractor-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP017
+    set_name: Over Rush Pack 2
+    rarities:
+    - Ultra Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1052179
+---
+konami_id:
+name:
+  en: The Twin Dragons of the Heavens
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>天<rt>てん</rt></ruby><ruby>上<rt>じょう</rt></ruby><ruby>之<rt>の</rt></ruby><ruby>双<rt>そう</rt></ruby><ruby>輪<rt>りん</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>
+  ja_romaji: Tenjō no Sōrinryū
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    Noble and majestic lights that pervade the heavens and earth throughout all eternity. They move based on the logic of the divine, calmly wielding majesty and authority.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Normal
+attribute: LIGHT
+level: 8
+atk: 2500
+def: 2000
+images:
+- index: 1
+  image: TheTwinDragonsoftheHeavens-RDGC24-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/GC24-JP001
+    set_name: Galaxy Cup 2024 Area Representative Match participation card
+    rarities:
+    - Normal Parallel Rare
+  - set_number: RD/GC24-JP001
+    set_name: Galaxy Cup 2024 Finals prize card
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1052181
