--- a/rush.yaml
+++ b/rush.yaml
@@ -139215,7 +139215,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During the turn you Normal Summoned this card, reveal 1 Fairy Type monster with 0 ATK in your hand.
+    During the turn you Normal Summoned this card, reveal 1 Fairy Type monster with 0 ATK in your hand to your opponent.
   de:
   es:
   fr:
@@ -139345,7 +139345,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 2 cards. You cannot activate monster effects until the end of this turn, except Cyberse Type monsters'.
+    Draw 2 cards. If you do, you cannot activate monster effects until the end of this turn, except those of Cyberse Type monsters.
   de:
   es:
   fr:
