--- a/rush.yaml
+++ b/rush.yaml
@@ -61805,6 +61805,10 @@ sets:
     set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/ORP2-JP059
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP09-KR019
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
@@ -73646,6 +73650,10 @@ sets:
     set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/ORP2-JP060
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP10-KR017
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
