--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -5322,8 +5322,8 @@ Battlin' Boxing:
   pt: Boxeadores Obstinados
   ja: バーニングナックル
   ja_romaji: Bāningu Nakkuru
-  ko:
-  ko_rr:
+  ko: 버닝나클
+  ko_rr: Beoningnakeul
   zh-TW:
   zh-CN:
 Icejade:
