--- a/data/cards/16516630.yaml
+++ b/data/cards/16516630.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Durante sua Fase Principal 1: você pode banir este card do Cemitério e, depois, escolha 1 monstro "Asanegra" que você controla; se esse monstro atacar neste turno, você não sofre dano de batalha desse ataque, ele não é destruído em batalha e, além disso, depois do cálculo de dano, destrua o monstro do oponente que ele batalhou.
   ja: |-
-    墓地に存在するこのカードをゲームから除外し、自分フィールド上に表側表示で存在する「ＢＦ」と名のついたモンスター１体を選択して発動する。このターン選択したモンスターが攻撃する場合、その戦闘で発生する自分への戦闘ダメージは０になり、選択したモンスターは戦闘では破壊されず、戦闘を行った相手モンスターをダメージステップ終了時に破壊する。
+    墓地に存在するこのカードをゲームから除外し、自分フィールド上に表側表示で存在する「ＢＦ」と名のついたモンスター１体を選択して発動する。このターン選択したモンスターが攻撃する場合、その攻撃によって発生する自分への戦闘ダメージは０になり、選択したモンスターは戦闘では破壊されず、戦闘を行った相手モンスターをダメージ計算後に破壊する。
   ko: |-
     묘지에 존재하는 이 카드를 게임에서 제외하고, 자신 필드 위에 앞면 표시로 존재하는 "BF(블랙 페더)"라는 이름이 붙은 몬스터 1장을 선택하고 발동한다. 이 턴에 선택한 몬스터가 공격할 경우, 그 공격에 의해서 발생하는 자신에게로의 전투 데미지는 0 이 되고, 선택한 몬스터는 전투로는 파괴되지 않으며, 전투를 실행한 상대 몬스터를 데미지 계산 후에 파괴한다.
   zh-TW: |-
