--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -5334,8 +5334,8 @@
   pt: Boxeadores Obstinados
   ja: バーニングナックル
   ja_romaji: Bāningu Nakkuru
-  ko:
-  ko_rr:
+  ko: 버닝나클
+  ko_rr: Beoningnakeul
   zh-TW:
   zh-CN:
 - en: Icejade
