--- a/data/rush/18402.yaml
+++ b/data/rush/18402.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
     rarities:
     - Secret Rare
+  - set_number: RD/ORP2-JP061
+    set_name: Over Rush Pack 2
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/SR02-KR006
     set_name: Secret Record Pack 2 Vol.2
