--- a/data/cards/19327348.yaml
+++ b/data/cards/19327348.yaml
@@ -85,7 +85,7 @@ sets:
     set_name: Duelist Card Protector Six Attribute Set
     rarities:
     - Secret Rare
-  - set_number: ????-JP00?
+  - set_number: DK01-JP005
     set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
     rarities:
     - Super Rare
