--- a/data/cards/73318863.yaml
+++ b/data/cards/73318863.yaml
@@ -88,7 +88,7 @@ sets:
     set_name: Duelist Card Protector Six Attribute Set
     rarities:
     - Secret Rare
-  - set_number: ????-JP00?
+  - set_number: DK01-JP006
     set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
     rarities:
     - Super Rare
