--- a/data/cards/74364659.yaml
+++ b/data/cards/74364659.yaml
@@ -140,7 +140,7 @@ sets:
     set_name: 'Structure Deck: Masters of the Spiritual Arts - The Legend of Duelist Quarter Century Edition'
     rarities:
     - Ultra Rare
-  - set_number: ????-JP00?
+  - set_number: DK01-JP002
     set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
     rarities:
     - Super Rare
