--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -729,7 +729,7 @@ A.I.:
   ko: <ruby>Ai<rt>아이</rt></ruby>
   ko_rr: Ai
   zh-TW:
-  zh-CN:
+  zh-CN: -艾-
 Dante:
   de: Dante
   es: Dante,
@@ -873,7 +873,7 @@ Altergeist:
   ko: 얼터가이스트
   ko_rr: Eolteogaiseuteu
   zh-TW:
-  zh-CN:
+  zh-CN: 幻变骚灵
 Crusadia:
   de: Crusadia
   es: Cruzadia
@@ -1257,7 +1257,7 @@ Abyss Script:
   ko: 마계대본
   ko_rr: Magye Daebon
   zh-TW:
-  zh-CN:
+  zh-CN: 魔界剧本
 Red Dragon Archfiend:
   de: Rotdrachen-Erzunterweltler
   es: Dragón Rojo Archidemonio
@@ -2385,7 +2385,7 @@ Zexal:
   ko: 제알
   ko_rr: Jeal
   zh-TW:
-  zh-CN:
+  zh-CN: ZEXAL
 Blue Tears:
   de: blauen Tränen
   es: Lágrimas Azules
@@ -2493,7 +2493,7 @@ Aroma:
   ko: 아로마
   ko_rr: Aroma
   zh-TW:
-  zh-CN:
+  zh-CN: 芬芳
 Krawler:
   de: Krawler
   es: Krawler
@@ -2828,8 +2828,8 @@ Barbaros:
   ja_romaji: Barubarosu
   ko: 바르바로스
   ko_rr: Bareubaroseu
-  zh-TW: 巴巴洛斯
-  zh-CN:
+  zh-TW:
+  zh-CN: 巴巴罗斯
 Branded:
   de: Markiert
   es: Señalado/a
@@ -3213,7 +3213,7 @@ Adamancipator:
   ko: 아다마시아
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 魔救
 Number 10X:
   de: Nummer 10X
   es: Número 10X
@@ -4257,7 +4257,7 @@ Visas:
   ko: 비서스
   ko_rr: Biseoseu
   zh-TW:
-  zh-CN:
+  zh-CN: 维萨思
 Onomat:
   de: Onomat
   es: Onomat
@@ -5037,7 +5037,7 @@ Melodious:
   ko: 환주
   ko_rr: Hwanju
   zh-TW:
-  zh-CN:
+  zh-CN: 幻奏
 Nemleria:
   de: Nemleria
   es: Nemleria
@@ -5313,7 +5313,7 @@ Cyber:
   ko: <ruby>@<rt>앳</rt></ruby>이그니스터
   ko_rr: Aet Igeuniseuteo
   zh-TW:
-  zh-CN:
+  zh-CN: ＠伊格尼斯者
 Battlin' Boxing:
   de: Unermüdliche Box
   es: Boxeadores
@@ -5493,7 +5493,7 @@ Zubaba:
   ko: 주바바
   ko_rr: Jubaba
   zh-TW:
-  zh-CN:
+  zh-CN: 刷拉拉
 Knightmare:
   de: Albtraumritter
   es: Caballero de Pesadilla
