--- a/data/cards/64881644.yaml
+++ b/data/cards/64881644.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 幻奏歌姬 露芙兰
 text:
   en: |-
     If this card is Normal or Special Summoned: You can add 1 "Melodious" monster from your Deck to your hand, except "Refrain the Melodious Songstress". If a "Melodious" Fusion Monster(s) is Special Summoned to your field while this card is face-up in your Extra Deck (except during the Damage Step): You can place this card in your Pendulum Zone. You can only use each monster effect of "Refrain the Melodious Songstress" once per turn.
@@ -25,7 +25,10 @@ text:
     このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。デッキから「幻奏の歌姫ルフラン」以外の「幻奏」モンスター１体を手札に加える。②：このカードがＥＸデッキに表側で存在する状態で、自分フィールドに「幻奏」融合モンスターが特殊召喚された場合に発動できる。このカードを自分のＰゾーンに置く。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    此卡名的①②怪兽效果１回合仅可各使用１次。
+    ①：此卡召唤・特殊召唤的情况下可以发动。从牌组将“幻奏歌姬 露芙兰”以外的１只“幻奏”怪兽加入手牌。
+    ②：此卡以表侧存在于额外牌组的状态下，“幻奏”融合怪兽被特殊召唤至自己场上的情况下可以发动。将此卡放在自己的灵摆区域。
 card_type: Monster
 monster_type_line: Fairy / Pendulum / Effect
 attribute: LIGHT
@@ -45,7 +48,9 @@ pendulum_effect:
     このカード名のＰ効果は１ターンに１度しか使用できない。①：自分フィールドの「幻奏」融合モンスター１体を対象として発動できる。デッキから「幻奏」モンスター１体を墓地へ送り、対象のモンスターの攻撃力をターン終了時まで、墓地へ送ったモンスターのレベル×２００アップする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    此卡名的灵摆效果１回合仅可使用１次。
+    ①：以自己场上的１只“幻奏”融合怪兽为对象可以发动。从牌组将１只“幻奏”怪兽送至墓地，对象怪兽的攻击力直至回合结束时为止，上升相当于送至墓地的怪兽的等级×２００的数值。
 series:
 - Melodious
 images:
