--- a/data/rush/yugipedia1048772.yaml
+++ b/data/rush/yugipedia1048772.yaml
@@ -53,6 +53,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
