--- a/data/rush/yugipedia1052574.yaml
+++ b/data/rush/yugipedia1052574.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have a face-up Aqua Type monster on your field and an Aqua Type monster in your Graveyard.
+    You have a face-up Aqua Type monster on your field and have an Aqua Type monster in your Graveyard.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 2 cards. Then, place 1 card from your hand on the bottom of the Deck.
+    Draw 2 cards. Then, place 1 card from your hand on the bottom of your Deck.
   de:
   es:
   fr:
