--- a/rush.yaml
+++ b/rush.yaml
@@ -138268,6 +138268,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -139451,7 +139452,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have a face-up Aqua Type monster on your field and an Aqua Type monster in your Graveyard.
+    You have a face-up Aqua Type monster on your field and have an Aqua Type monster in your Graveyard.
   de:
   es:
   fr:
@@ -139463,7 +139464,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 2 cards. Then, place 1 card from your hand on the bottom of the Deck.
+    Draw 2 cards. Then, place 1 card from your hand on the bottom of your Deck.
   de:
   es:
   fr:
