--- a/data/cards/05758500.yaml
+++ b/data/cards/05758500.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Escolha até 5 cards em quaisquer Cemitérios; bana-os.
   ja: |-
-    お互いの墓地から合計５枚までのカードを選択し、そのカードをゲームから除外する。
+    ①：自分・相手の墓地のカードを合計５枚まで対象として発動できる。そのカードを除外する。
   ko: |-
     서로의 묘지의 카드를 합계 5장까지 선택하여, 그 카드를 게임에서 제외한다.
   zh-TW: |-
@@ -240,6 +240,11 @@ sets:
     set_name: The Gold Box
     rarities:
     - Gold Rare
+  - set_number: 24EP-JP109
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: MRD-K058
     set_name: Metal Raiders
