--- a/data/cards/26202165.yaml
+++ b/data/cards/26202165.yaml
@@ -460,6 +460,11 @@ sets:
     set_name: 'Structure Deck: Masters of the Spiritual Arts - The Legend of Duelist Quarter Century Edition'
     rarities:
     - Ultra Rare
+  - set_number: 24EP-JP101
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: MRD-K069
     set_name: Metal Raiders
