--- a/data/cards/61665245.yaml
+++ b/data/cards/61665245.yaml
@@ -34,10 +34,10 @@ text:
     Se este card for Invocado por Invocação-Link: você pode Invocar por Invocação-Especial 1 monstro da sua mão em Posição de Defesa, em uma zona do seu oponente para a qual este card apontar. Você pode escolher 1 monstro com a face para cima para o qual este card apontar; Invoque por Invocação-Especial 1 monstro do seu Deck em Posição de Defesa, com o mesmo Tipo que esse monstro, em uma zona para a qual este card apontar, mas negue seus efeitos. Você só pode usar este efeito de "Feiticeira Invocadora" uma vez por turno.
   ja: |-
     トークン以外の同じ種族のモンスター２体以上
-    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードがリンク召喚に成功した場合に発動できる。手札からモンスター１体を、このカードのリンク先となる相手フィールドに守備表示で特殊召喚する。②：このカードのリンク先の表側表示モンスター１体を対象として発動できる。そのモンスターと同じ種族のモンスター１体をデッキから選び、このカードのリンク先となる自分・相手フィールドに守備表示で特殊召喚する。この効果で特殊召喚したモンスターの効果は無効化される。
+    このカード名の効果は１ターンに１度しか使用できない。①：このカードがＬ召喚した場合に発動できる。手札からモンスター１体を効果を無効にして、このカードのリンク先となる相手フィールドに守備表示で特殊召喚する。その後、この効果で特殊召喚したモンスターと同じ種族のモンスター１体をデッキから効果を無効にして守備表示で特殊召喚できる。この効果でデッキから特殊召喚したターン、自分はデッキから特殊召喚したそのモンスターと元々の種族が同じモンスターしか特殊召喚できない。
   ko: |-
     토큰 이외의 같은 종족의 몬스터 2장 이상
-    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 링크 소환에 성공했을 경우에 발동할 수 있다. 패에서 몬스터 1장을, 이 카드의 링크 앞이 되는 상대 필드에 수비 표시로 특수 소환한다. ②: 이 카드의 링크 앞의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터와 같은 종족의 몬스터 1장을 덱에서 고르고, 이 카드의 링크 앞이 되는 자신 / 상대 필드에 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 몬스터의 효과는 무효화된다.
+    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 링크 소환했을 경우에 발동할 수 있다. 패에서 몬스터 1장을 효과를 무효로 하고, 이 카드의 링크 앞이 되는 상대 필드에 수비 표시로 특수 소환한다. 그 후, 이 효과로 특수 소환한 몬스터와 같은 종족의 몬스터 1장을 덱에서 효과를 무효로 하고 수비 표시로 특수 소환할 수 있다. 이 효과로 덱에서 특수 소환한 턴에, 자신은 덱에서 특수 소환한 그 몬스터와 원래의 종족이 같은 몬스터밖에 특수 소환할 수 없다.
   zh-TW: |-
     衍生物以外的同種族怪獸２隻以上
     此卡名的②效果，１回合僅限使用１次。①：可在此卡連結召喚成功的狀況下發動。從手牌以守備表示特殊召喚１隻怪獸至此卡連結指向的對方場上。②：可將此卡連結指向的１隻正面表示怪獸做為對象發動。從牌組選擇１隻種族與該怪獸相同的怪獸，以守備表示特殊召喚至此卡連結指向的我方・對方場上。透過此效果特殊召喚的怪獸效果無效化。
