--- a/data/cards/69162969.yaml
+++ b/data/cards/69162969.yaml
@@ -369,6 +369,11 @@ sets:
     set_name: Duel Royale Deck Set EX Round 2
     rarities:
     - Common
+  - set_number: 24EP-JP112
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: FET-KR040
     set_name: Flaming Eternity
