--- a/data/cards/kdb20274.yaml
+++ b/data/cards/kdb20274.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20274
 password:
 name:
   en: Pity
@@ -22,7 +22,7 @@ text:
   it:
   pt:
   ja: |-
-    契約者に幸運をもたらすとされる、ガラス瓶に宿るカワイイ奴。その蓋は絶対に開けてはならない。どんな事が起ころうと絶対に・・・。
+    契約者に幸運をもたらすとされる、ガラス瓶に宿るカワイイ奴。その蓋は絶対に開けてはならない。どんな事が起ころうと絶対に…。
   ko:
   zh-TW:
   zh-CN:
@@ -43,7 +43,7 @@ sets:
     - Super Parallel Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
