--- a/data/rush/15909.yaml
+++ b/data/rush/15909.yaml
@@ -25,7 +25,7 @@ requirement:
     Non hai altri mostri sul tuo Terreno e hai "Femtron" nel tuo Cimitero.
   pt:
   ja: |-
-    自分フィールドにこのカード以外のモンスターがおらず、自分の墓地に「フェムトロン」がいる場合に発動できる。
+    自分の墓地に「フェムトロン」がいて、自分フィールドにこのカード以外のモンスターがいない場合に発動できる。
   ko: |-
     자신 필드에 이 카드 이외의 몬스터가 없으며, 자신 묘지에 "펨트론"이 있을 경우에 발동할 수 있다.
   zh-TW:
