--- a/data/cards/00359563.yaml
+++ b/data/cards/00359563.yaml
@@ -34,7 +34,7 @@ text:
     Quando seu oponente Invocar um ou mais monstros por Invocação-Especial (exceto durante a Etapa de Dano): você pode desassociar 1 matéria deste card; coloque os monstros Invocados por Invocação-Especial com a face para baixo em Posição de Defesa.
   ja: |-
     闇属性レベル４モンスター×２
-    相手がモンスターの特殊召喚に成功した時、このカードのエクシーズ素材を１つ取り除く事で、その特殊召喚したモンスターを裏側守備表示にする。
+    ①：相手がモンスターを特殊召喚した時、このカードのＸ素材を１つ取り除いて発動できる。そのモンスターを裏側守備表示にする。
   ko: |-
     어둠 속성 레벨 4 몬스터 × 2
     상대가 몬스터의 특수 소환에 성공했을 때, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 그 특수 소환한 몬스터를 뒷면 수비 표시로 한다.
@@ -42,8 +42,8 @@ text:
     闇屬性等級４怪獸×２
     對方成功特殊召喚怪獸時，可去除此卡的１個超量素材發動。將特殊召喚的該怪獸變為反面守備表示。
   zh-CN: |-
-    暗属性等级4怪兽×2
-    ①：对手特殊召唤怪兽成功时，去除此卡的1个超量素材可以发动。将该特殊召唤的怪兽改成里侧守备表示。
+    暗属性等级４怪兽×２
+    ①：对手特殊召唤怪兽成功时，去除此卡的１个超量素材可以发动。将该特殊召唤的怪兽改成里侧守备表示。
 card_type: Monster
 monster_type_line: Fiend / Xyz / Effect
 attribute: DARK
