--- a/data/cards/01861629.yaml
+++ b/data/cards/01861629.yaml
@@ -34,7 +34,7 @@ text:
     Ganha 500 de ATK para cada monstro para o qual ele apontar. Quando seu oponente ativar um card ou efeito que escolha como alvo um ou mais cards que você controla (Efeito Rápido): você pode oferecer como Tributo 1 monstro para o qual este card apontar; negue a ativação e, se isso acontecer, destrua esse card.
   ja: |-
     効果モンスター２体以上
-    ①：このカードの攻撃力は、このカードのリンク先のモンスターの数×５００アップする。②：自分フィールドのカードを対象とする相手の魔法・罠・モンスターの効果が発動した時、このカードのリンク先の自分のモンスター１体をリリースして発動できる。その発動を無効にし破壊する。
+    ①：このカードの攻撃力は、このカードのリンク先のモンスターの数×５００アップする。②：自分フィールドのカードを対象とする魔法・罠・モンスターの効果を相手が発動した時、このカードのリンク先の自分のモンスター１体をリリースして発動できる。その発動を無効にし破壊する。
   ko: |-
     효과 몬스터 2장 이상
     ①: 이 카드의 공격력은, 이 카드의 링크 앞의 몬스터의 수 × 500 올린다. ②: 자신 필드의 카드를 대상으로 하는 마법 / 함정 / 몬스터의 효과를 상대가 발동했을 때, 이 카드의 링크 앞의 자신 몬스터 1장을 릴리스하고 발동할 수 있다. 그 발동을 무효로 하고 파괴한다.
@@ -231,6 +231,11 @@ sets:
   - set_number: TGS1-JP001
     set_name: Tokyo Game Show 2022 promotional card
     rarities:
+    - Normal Parallel Rare
+  - set_number: 24EP-JP108
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
     - Normal Parallel Rare
   ko:
   - set_number: ST17-KR041
