--- a/data/cards/05318639.yaml
+++ b/data/cards/05318639.yaml
@@ -1205,6 +1205,11 @@ sets:
     set_name: Duel Royale Deck Set EX Round 2
     rarities:
     - Common
+  - set_number: 24EP-JP111
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: SRL-K047
     set_name: Spell Ruler
