--- a/data/cards/19613556.yaml
+++ b/data/cards/19613556.yaml
@@ -536,6 +536,11 @@ sets:
     set_name: Duel Royale Deck Set EX Round 2
     rarities:
     - Common
+  - set_number: 24EP-JP110
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: MRD-K142
     set_name: Metal Raiders
