--- a/data/cards/22624373.yaml
+++ b/data/cards/22624373.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você pode escolher 1 Magia/Armadilha que seu oponente controla; a posição de batalha deste card não pode ser mudada até o final do seu próximo turno e, além disso, mude este card que você controla com a face para cima em Posição de Ataque para com a face para cima em Posição de Defesa e, se isso acontecer, destrua o alvo. Uma vez por turno, durante sua Fase Final: envie os 3 cards do topo do seu Deck para o Cemitério.
   ja: |-
-    ①：自分メインフェイズに相手フィールドの魔法・罠カード１枚を対象として発動できる。自分フィールドの表側攻撃表示のこのカードを守備表示にし、対象の相手のカードを破壊する。この効果の発動後、次の自分ターンの終了時までこのカードは表示形式を変更できない。②：自分エンドフェイズに発動する。自分のデッキの上からカードを３枚墓地へ送る。
+    ①：相手フィールドの魔法・罠カード１枚を対象として発動できる。自分フィールドの表側攻撃表示のこのカードを守備表示にし、対象の相手のカードを破壊する。この効果の発動後、次の自分ターンの終了時までこのカードは表示形式を変更できない。②：自分エンドフェイズに発動する。自分のデッキの上からカードを３枚墓地へ送る。
   ko: |-
     ①: 자신 메인 페이즈에 상대 필드의 마법 / 함정 카드 1장을 대상으로 하고 발동할 수 있다. 자신 필드의 앞면 공격 표시의 이 카드를 수비 표시로 하고, 대상 상대의 카드를 파괴한다. 이 효과의 발동 후, 다음 자신 턴의 종료시까지 이 카드는 표시 형식을 변경할 수 없다. ②: 자신 엔드 페이즈에 발동한다. 자신의 덱 위에서 카드를 3장 묘지로 보낸다.
   zh-TW: |-
@@ -212,6 +212,11 @@ sets:
     set_name: 'Structure Deck: Master of Pendulum'
     rarities:
     - Common
+  - set_number: 24EP-JP106
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: LODT-KR019
     set_name: Light of Destruction
