--- a/data/cards/41721210.yaml
+++ b/data/cards/41721210.yaml
@@ -34,7 +34,7 @@ text:
     O nome deste card se torna "Mago Negro" enquanto ele estiver no campo ou no Cemitério. Seu oponente não pode escolher Magias/Armadilhas que você controla como alvo de efeitos de card e, além disso, elas não podem ser destruídas pelos efeitos de card do seu oponente.
   ja: |-
     「ブラック・マジシャン」＋ドラゴン族モンスター
-    ①：このカードのカード名は、フィールド・墓地に存在する限り「ブラック・マジシャン」として扱う。②：このカードがモンスターゾーンに存在する限り、自分フィールドの魔法・罠カードは相手の効果の対象にならず、相手の効果では破壊されない。
+    ①：このカードのカード名は、フィールド・墓地に存在する限り「ブラック・マジシャン」として扱う。②：このカードがモンスターゾーンに存在する限り、自分フィールドの魔法・罠カードは相手の効果では破壊されず、相手はそれらを効果の対象にできない。
   ko: |-
     "블랙 매지션" ＋ 드래곤족 몬스터
     ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "블랙 매지션"으로 취급한다. ②: 이 카드가 몬스터 존에 존재하는 한, 자신 필드의 마법 / 함정 카드는 상대 효과의 대상이 되지 않으며, 상대 효과로는 파괴되지 않는다.
@@ -42,8 +42,8 @@ text:
     「黑魔導」＋龍族怪獸
     ①：只要此卡存在於場上・墓地，卡名就視為「黑魔導」。②：只要此卡存在於怪獸區，我方場上的魔法・陷阱卡就不會成為對方的效果對象，不會因對方效果被破壞。
   zh-CN: |-
-    "黑魔导"＋龙族怪兽
-    ①：此卡只要存在于场上・墓地，卡名视为"黑魔导"。②：只要此卡存在于怪兽区域，自己场上的魔法・陷阱卡不会成为对手效果的对象，也不会因对手的效果而被破坏。
+    “黑魔导”＋龙族怪兽
+    ①：此卡只要存在于场上・墓地，卡名视为“黑魔导”。②：只要此卡存在于怪兽区域，自己场上的魔法・陷阱卡不会成为对手效果的对象，也不会因对手的效果而被破坏。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: DARK
