--- a/data/cards/44822037.yaml
+++ b/data/cards/44822037.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Invoque este card por Invocação-Especial como um Monstro de Efeito (Fada/LUZ/Nível 4/ATK 1800/DEF 1800). (Este card ainda é considerado uma Armadilha.) Uma vez por turno, quando seu oponente Invocaria um ou mais monstros por Invocação-Especial enquanto este card estiver na sua Zona de Monstros: você pode enviar para o Cemitério, 1 Armadilha Contínua na sua Zona de Monstros que foi Invocada por Invocação-Especial da Zona de Magias & Armadilhas; negue a Invocação e, se isso acontecer, destrua esses monstros. Quando este card na Zona de Monstros for destruído em batalha: você pode destruir o monstro que destruiu este card.
   ja: |-
-    ①：このカードは発動後、効果モンスター（天使族・光・星４・攻／守１８００）となり、モンスターゾーンに特殊召喚する。このカードは罠カードとしても扱う。②：１ターンに１度、このカードがモンスターゾーンに存在し、相手がモンスターを特殊召喚する際に、魔法＆罠ゾーンから特殊召喚された自分のモンスターゾーンの永続罠カード１枚を墓地へ送って発動できる。その特殊召喚を無効にし、そのモンスターを破壊する。③：モンスターゾーンのこのカードが戦闘で破壊された時に発動できる。このカードを破壊したモンスターを破壊する。
+    ①：このカードは発動後、効果モンスター（天使族・光・星４・攻／守１８００）となり、モンスターゾーンに特殊召喚する（罠カードとしても扱う）。②：このカードがこのカードの効果で特殊召喚されている場合、１ターンに１度、相手がモンスターを特殊召喚する際に、魔法＆罠ゾーンから特殊召喚された自分のモンスターゾーンの永続罠カード１枚を墓地へ送って発動できる。その特殊召喚を無効にし、そのモンスターを破壊する。③：このカードが戦闘で破壊された時に発動できる。このカードを破壊したモンスターを破壊する。
   ko: |-
     ①: 이 카드는 발동 후, 효과 몬스터(천사족 / 빛 / 레벨 4 / 공 1800 / 수 1800)가 되어, 몬스터 존에 특수 소환한다. 이 카드는 함정 카드로도 취급한다. ②: 1턴에 1번, 이 카드가 몬스터 존에 존재하고, 상대가 몬스터를 특수 소환할 시기에, 마법 & 함정 존에서 특수 소환된 자신 몬스터 존의 지속 함정 카드 1장을 묘지로 보내고 발동할 수 있다. 그 특수 소환을 무효로 하고, 그 몬스터를 파괴한다. ③: 몬스터 존의 이 카드가 전투로 파괴되었을 때에 발동할 수 있다. 이 카드를 파괴한 몬스터를 파괴한다.
   zh-TW: |-
