--- a/data/cards/50078509.yaml
+++ b/data/cards/50078509.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     可以选择场上的1只效果怪兽进行发动。选择的怪兽不可进行攻击，效果被无效化。当选择的怪兽被破坏时，破坏此卡。
   zh-CN: |-
-    以场上的1只效果怪兽为对象可以发动此卡。①：只要此卡存在于魔法与陷阱区域，该表侧表示怪兽就不可攻击，效果无效化。该怪兽被破坏时将此卡破坏。
+    以场上的１只效果怪兽为对象可以发动此卡。①：只要此卡存在于魔法与陷阱区域，对象的表侧表示怪兽就不可攻击，效果无效化。对象怪兽被破坏时将此卡破坏。
 card_type: Trap
 property: Continuous
 images:
@@ -324,6 +324,11 @@ sets:
     set_name: 'Structure Deck: Pulse of the King'
     rarities:
     - Common
+  - set_number: 24EP-JP115
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: ABPF-KR064
     set_name: Absolute Powerforce
