--- a/data/cards/50383626.yaml
+++ b/data/cards/50383626.yaml
@@ -38,7 +38,7 @@ text:
     ● Se um monstro de TREVAS que você controla for oferecido como Tributo (exceto durante a Etapa de Dano): você pode Invocar este card por Invocação-Especial do seu Cemitério (se ele estava lá quando você ofereceu o Tributo) ou da mão (mesmo se ele não estava).
     ● Você pode oferecer como Tributo 1 monstro de TREVAS; seu oponente coloca 1 card da mão dele no topo ou no fundo do Deck.
   ja: |-
-    このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札・墓地に存在し、自分フィールドの闇属性モンスターがリリースされた場合に発動できる。このカードを特殊召喚する。②：このカードがモンスターゾーンに存在する限り、相手はこのカードをリリースできず、効果の対象にもできない。③：自分フィールドの闇属性モンスター１体をリリースして発動できる。相手は手札を１枚選んでデッキの一番上または一番下に戻す。
+    このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札・墓地に存在し、自分フィールドの闇属性モンスターがリリースされた場合に発動できる。このカードを特殊召喚する。②：このカードがモンスターゾーンに存在する限り、相手はこのカードをリリースできず、効果の対象にもできない。③：自分フィールドの闇属性モンスター１体をリリースして発動できる。相手は自身の手札を１枚選んでデッキの一番上か一番下に戻す。
   ko: |-
     이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패 / 묘지에 존재하고, 자신 필드의 어둠 속성 몬스터가 릴리스되었을 경우에 발동할 수 있다. 이 카드를 특수 소환한다. ②: 이 카드가 몬스터 존에 존재하는 한, 상대는 이 카드를 릴리스할 수 없으며, 효과의 대상으로도 할 수 없다. ③: 자신 필드의 어둠 속성 몬스터 1장을 릴리스하고 발동할 수 있다. 상대는 패를 1장 고르고 덱의 맨 위 또는 맨 아래로 되돌린다.
   zh-TW: |-
