--- a/data/cards/63995093.yaml
+++ b/data/cards/63995093.yaml
@@ -27,13 +27,13 @@ text:
   pt: |-
     Escolha 1 monstro Máquina que você controla com 500 ou menos de ATK; Invoque por Invocação-Especial até 2 monstros do seu Deck com o mesmo nome que esse monstro com a face para cima.
   ja: |-
-    ①：自分フィールドの攻撃力５００以下の機械族モンスター１体を対象として発動できる。デッキからその表側表示モンスターの同名モンスターを２体まで特殊召喚する。
+    ①：自分フィールドの攻撃力５００以下の機械族モンスター１体を対象として発動できる。そのモンスターの同名モンスターを２体までデッキから特殊召喚する。
   ko: |-
     ①: 자신 필드의 공격력 500 이하인 기계족 몬스터 1장을 대상으로 하고 발동할 수 있다. 덱에서 그 앞면 표시 몬스터의 같은 이름의 몬스터를 2장까지 특수 소환한다.
   zh-TW: |-
     可选择我方场上攻击力500或以下的1只机械族怪兽发动。从我方牌组中特殊召唤最多2只与被选择怪兽同名的怪兽。
   zh-CN: |-
-    ①：以自己场上1只攻击力500以下的机械族怪兽为对象可以发动。从牌组将最多2只该表侧表示怪兽的同名怪兽特殊召唤。
+    ①：以自己场上１只攻击力５００以下的机械族怪兽为对象可以发动。从牌组将最多２只该表侧表示怪兽的同名怪兽特殊召唤。
 card_type: Spell
 property: Normal
 images:
