--- a/data/cards/64043465.yaml
+++ b/data/cards/64043465.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você pode escolher 1 monstro no campo: envie 1 monstro "O Proibido" ou card "Exodia" da sua mão ou Deck para o Cemitério e, se isso acontecer, devolva o alvo para a mão. Se este card for enviado da Zona de Magias & Armadilhas para o Cemitério: você pode escolher 1 monstro "O Proibido" ou card "Exodia" no seu Cemitério; adicione-o à sua mão. Você só pode usar 1 efeito de "Obliterar!!!" por turno e apenas uma vez por turno.
   ja: |-
-    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：フィールドのモンスター１体を対象として発動できる。手札・デッキから「封印されし」モンスター１体または「エクゾディア」カード１枚を墓地へ送り、対象のカードを持ち主の手札に戻す。②：このカードが魔法＆罠ゾーンから墓地へ送られた場合、自分の墓地の「封印されし」モンスター１体または「エクゾディア」カード１枚を対象として発動できる。そのカードを手札に加える。
+    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：フィールドのモンスター１体を対象として発動できる。手札・デッキから「封印されし」モンスター１体か「エクゾディア」カード１枚を墓地へ送り、対象のモンスターを手札に戻す。②：このカードが魔法＆罠ゾーンから墓地へ送られた場合、自分の墓地の、「封印されし」モンスター１体か「エクゾディア」カード１枚を対象として発動できる。そのカードを手札に加える。
   ko: |-
     "엑조드 프레임"의 ①②의 효과는 1턴에 1번, 1개밖에 사용할 수 없다. ①: 필드의 몬스터 1장을 대상으로 하고 이 효과를 발동할 수 있다. 패 / 덱에서 "봉인된" 몬스터 1장 또는 "엑조디아" 카드 1장을 묘지로 보내고, 대상의 카드를 주인의 패로 되돌린다. ②: 이 카드가 마법 & 함정 존에서 묘지로 보내졌을 경우, 자신 묘지의 "봉인된" 몬스터 1장 또는 "엑조디아" 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 패에 넣는다.
   zh-TW: |-
