--- a/data/cards/65192027.yaml
+++ b/data/cards/65192027.yaml
@@ -321,6 +321,11 @@ sets:
     set_name: 'Structure Deck: Rebirth of Shaddoll'
     rarities:
     - Common
+  - set_number: 24EP-JP104
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: PTDN-KR019
     set_name: Phantom Darkness
