--- a/data/cards/73125233.yaml
+++ b/data/cards/73125233.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se este card for Invocado por Invocação-Tributo: escolha 1 card no campo; coloque o alvo no topo do Deck.
   ja: |-
-    ①：このカードがアドバンス召喚に成功した場合、フィールドのカード１枚を対象として発動する。そのカードを持ち主のデッキの一番上に戻す。
+    ①：このカードがアドバンス召喚した場合、フィールドのカード１枚を対象として発動する。そのカードをデッキの一番上に戻す。
   ko: |-
     ①: 이 카드가 어드밴스 소환에 성공했을 경우, 필드의 카드 1장을 대상으로 하고 발동한다. 그 카드를 주인의 덱 맨 위로 되돌린다.
   zh-TW: |-
@@ -193,6 +193,11 @@ sets:
   - set_number: SR01-JP009
     set_name: 'Structure Deck R: Advent of the True Monarch'
     rarities:
+    - Normal Parallel Rare
+  - set_number: 24EP-JP103
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
     - Normal Parallel Rare
   ko:
   - set_number: FOTB-KR026
