--- a/data/cards/77538567.yaml
+++ b/data/cards/77538567.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando seu oponente ativar um Card de Magia/Armadilha: seu oponente compra 1 card e, além disso, negue a ativação da Magia/Armadilha e, se isso acontecer, destrua-a.
   ja: |-
-    ①：相手が魔法・罠カードを発動した時に発動できる。その発動を無効にし破壊する。相手はデッキから１枚ドローする。
+    ①：相手が魔法・罠カードを発動した時に発動できる。その発動を無効にし破壊する。相手は１枚ドローする。
   ko: |-
     ①: 상대가 마법 / 함정 카드를 발동했을 때에 발동할 수 있다. 그 발동을 무효로 하고 파괴한다. 상대는 덱에서 1장 드로우한다.
   zh-TW: |-
@@ -279,6 +279,11 @@ sets:
     set_name: Starter Deck 2019
     rarities:
     - Common
+  - set_number: 24EP-JP114
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: SD10-KRSE1
     set_name: 'Structure Deck: Machine Re-Volt Special Edition (Korean)'
