--- a/data/cards/81519836.yaml
+++ b/data/cards/81519836.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Todos os monstros no campo perdem 600 de ATK, exceto monstros "Vernasílfide". Você pode descartar este card e 1 monstro ou 1 card "Vernasílfide"; você não pode ativar efeitos de monstros que não sejam de TERRA pelo resto deste turno e, além disso, adicione 1 monstro Fada de TERRA do seu Deck à sua mão, exceto "Vernasílfide das Mudas de Neblina" e, depois, você pode Invocar por Invocação-Especial 1 monstro de TERRA do seu Cemitério. Você só pode usar este efeito de "Vernasílfide das Mudas de Neblina" uma vez por turno.
   ja: |-
-    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードと、モンスター１体または「春化精」カード１枚を手札から捨てて発動できる。デッキから「苗と霞の春化精」以外の天使族・地属性モンスター１体を手札に加える。その後、自分の墓地から地属性モンスター１体を選んで特殊召喚できる。このターン、自分は地属性以外のモンスターの効果を発動できない。②：このカードがモンスターゾーンに存在する限り、「春化精」モンスター以外のフィールドのモンスターの攻撃力は６００ダウンする。
+    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードと、モンスター１体か「春化精」カード１枚を手札から捨てて発動できる。デッキから「苗と霞の春化精」以外の天使族・地属性モンスター１体を手札に加える。その後、自分の墓地から地属性モンスター１体を特殊召喚できる。このターン、自分は地属性以外のモンスターの効果を発動できない。②：このカードがモンスターゾーンに存在する限り、「春化精」モンスター以外のフィールドのモンスターの攻撃力は６００ダウンする。
   ko: |-
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드와, 몬스터 1장 또는 "봄화정" 카드 1장을 패에서 버리고 발동할 수 있다. 덱에서 "모종과 안개의 봄화정" 이외의 천사족 / 땅 속성 몬스터 1장을 패에 넣는다. 그 후, 자신 묘지에서 땅 속성 몬스터 1장을 고르고 특수 소환할 수 있다. 이 턴에, 자신은 땅 속성 이외의 몬스터 효과를 발동할 수 없다. ②: 이 카드가 몬스터 존에 존재하는 한, "봄화정" 몬스터 이외의 필드의 몬스터의 공격력은 600 내린다.
   zh-TW: |-
