--- a/data/cards/94119480.yaml
+++ b/data/cards/94119480.yaml
@@ -34,7 +34,7 @@ text:
     Uma vez por turno: Você pode desassociar 1 Matéria Xyz deste card para escolher 1 card com a face para cima que seu oponente controla; destrua-o.
   ja: |-
     レベル５モンスター×２
-    １ターンに１度、このカードのエクシーズ素材を１つ取り除き、相手フィールド上に表側表示で存在するカード１枚を選択して発動できる。選択したカードを破壊する。
+    ①：１ターンに１度、このカードのＸ素材を１つ取り除き、相手フィールドの表側表示カード１枚を対象として発動できる。そのカードを破壊する。
   ko: |-
     레벨 5 몬스터 × 2
     1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 상대 필드 위에 앞면 표시로 존재하는 카드 1장을 선택하고 발동할 수 있다. 선택한 카드를 파괴한다.
@@ -102,6 +102,11 @@ sets:
     set_name: Extra Pack 2012
     rarities:
     - Ultra Rare
+  - set_number: 24EP-JP107
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: EXP5-KR017
     set_name: Extra Pack 2012
