--- a/data/cards/97651498.yaml
+++ b/data/cards/97651498.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se este card for descartado para o Cemitério: Invoque-o por Invocação-Especial.
   ja: |-
-    このカードが手札から墓地へ捨てられた時、このカードを自分フィールド上に特殊召喚する。
+    ①：このカードが手札から墓地へ捨てられた場合に発動する。このカードを特殊召喚する。
   ko: |-
     이 카드가 패에서 묘지에 버려졌을 때, 이 카드를 자신 필드 위에 특수 소환한다.
   zh-TW: |-
