--- a/data/cards/98414735.yaml
+++ b/data/cards/98414735.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Escolha 1 monstro com a face para cima que seu oponente controla; coloque-o com a face para baixo em Posição de Defesa. Uma vez por Corrente, quando um Card de Armadilha for ativado enquanto este card estiver no seu Cemitério: você pode Invocar este card por Invocação-Especial como um Monstro Normal (Aqua/ÁGUA/Nível 2/ATK 1200/DEF 0). (Este card NÃO é considerado como uma Armadilha.) Se Invocado desta forma, este card não é afetado por efeitos de monstro e, além disso, bana-o quando ele deixar o campo.
   ja: |-
-    ①：相手フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターを裏側守備表示にする。②：罠カードが発動した時、その発動にチェーンしてこの効果を墓地で発動できる。このカードは通常モンスター（水族・水・星２・攻１２００／守０）となり、モンスターゾーンに特殊召喚する（罠カードとしては扱わない）。この効果で特殊召喚したこのカードはモンスターの効果を受けず、フィールドから離れた場合に除外される。
+    ①：相手フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターを裏側守備表示にする。②：このカードが墓地に存在し、罠カードが発動した時に発動できる（同一チェーン上では１度まで）。このカードは通常モンスター（水族・水・星２・攻１２００／守０）となり、モンスターゾーンに特殊召喚する（罠カードとしては扱わない）。この効果で特殊召喚したこのカードはモンスターの効果を受けず、フィールドから離れた場合に除外される。
   ko: |-
     ①: 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 뒷면 수비 표시로 한다. ②: 함정 카드가 발동했을 때, 그 발동에 체인하여 이 효과를 묘지에서 발동할 수 있다. 이 카드는 일반 몬스터(물족 / 물 / 레벨 2 / 공 1200 / 수 0)가 되고, 몬스터 존에 특수 소환한다(함정 카드로는 취급하지 않는다). 이 효과로 특수 소환한 이 카드는 몬스터의 효과를 받지 않으며, 필드에서 벗어났을 경우에 제외된다.
   zh-TW: |-
@@ -140,6 +140,11 @@ sets:
     set_name: "Structure Deck: Cyber Style's Successor"
     rarities:
     - Common
+  - set_number: 24EP-JP116
+    set_name: Event Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: CORE-KR083
     set_name: Clash of Rebellions
