--- a/data/rush/16594.yaml
+++ b/data/rush/16594.yaml
@@ -35,7 +35,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分の墓地のモンスター（レベル５以上／攻撃力０）１体を選んで自分フィールドに表側攻撃表示で特殊召喚する。
+    自分の墓地のモンスター（レベル５以上／攻撃力０）１体を選び、自分フィールドに表側攻撃表示で特殊召喚する。
   ko: |-
     자신 묘지의 몬스터(레벨 5 이상 / 공격력 0) 1장을 고르고 자신 필드에 앞면 공격 표시로 특수 소환한다.
   zh-TW:
