--- a/data/rush/18595.yaml
+++ b/data/rush/18595.yaml
@@ -35,7 +35,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分の墓地の通常モンスター１体を選び、自分フィールドに表側表示で特殊召喚する。さらにこのターン、このカードのカード名はこの効果で特殊召喚したモンスターと同じカード名になる。
+    自分の墓地の通常モンスター１体を選び、自分フィールドに表側表示で特殊召喚する。その後、このカードのカード名はこのターン、この効果で特殊召喚したモンスターと同じカード名になる。
   ko: |-
     자신 묘지의 일반 몬스터 1장을 고르고, 자신 필드에 앞면 표시로 특수 소환한다. 추가로 이 턴에, 이 카드의 카드명은 이 효과로 특수 소환한 몬스터와 같은 카드명이 된다.
   zh-TW:
