--- a/data/cards/06351548.yaml
+++ b/data/cards/06351548.yaml
@@ -101,6 +101,11 @@ sets:
     set_name: Primal Origin
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 24SP-SC209
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
