--- a/data/cards/70493141.yaml
+++ b/data/cards/70493141.yaml
@@ -104,6 +104,10 @@ sets:
     set_name: Mega Pack 01
     rarities:
     - Common
+  - set_number: 24SP-SC211
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
