--- a/data/cards/89312388.yaml
+++ b/data/cards/89312388.yaml
@@ -229,6 +229,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Collector's Rare
+  - set_number: 24SP-SC207
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
