--- a/data/cards/00786906.yaml
+++ b/data/cards/00786906.yaml
@@ -83,6 +83,11 @@ sets:
     set_name: Secret Shiny Box
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: 24SP-SC223
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
