--- a/data/cards/01845204.yaml
+++ b/data/cards/01845204.yaml
@@ -351,6 +351,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Collector's Rare
+  - set_number: 24SP-SC218
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Limited
   ocg: Limited
