--- a/data/cards/15661378.yaml
+++ b/data/cards/15661378.yaml
@@ -127,6 +127,11 @@ sets:
     set_name: LINK VRAINS Pack 3
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 24SP-SC201
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Ultra Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
