--- a/data/cards/31305911.yaml
+++ b/data/cards/31305911.yaml
@@ -263,6 +263,11 @@ sets:
     set_name: 'Memories of the Duel King: Ceremonial Battle Arc'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: 24SP-SC202
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
