--- a/data/cards/41175645.yaml
+++ b/data/cards/41175645.yaml
@@ -154,6 +154,10 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Collector's Rare
+  - set_number: 24SP-SC200
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
