--- a/data/cards/58695102.yaml
+++ b/data/cards/58695102.yaml
@@ -148,6 +148,11 @@ sets:
     set_name: 'Structure Deck: Master of Pendulum'
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC210
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
