--- a/data/cards/66865880.yaml
+++ b/data/cards/66865880.yaml
@@ -108,6 +108,11 @@ sets:
     set_name: 'Memories of the Duel King: Ceremonial Battle Arc'
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC217
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
