--- a/data/cards/69452756.yaml
+++ b/data/cards/69452756.yaml
@@ -172,6 +172,10 @@ sets:
     set_name: 'Structure Deck: Rebirth of Shaddoll'
     rarities:
     - Common
+  - set_number: 24SP-SC203
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
