--- a/data/cards/70946699.yaml
+++ b/data/cards/70946699.yaml
@@ -100,6 +100,11 @@ sets:
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC222
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
