--- a/data/cards/74974229.yaml
+++ b/data/cards/74974229.yaml
@@ -97,6 +97,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: 24SP-SC216
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
