--- a/data/cards/87979586.yaml
+++ b/data/cards/87979586.yaml
@@ -99,6 +99,11 @@ sets:
     set_name: Shining Victories
     rarities:
     - Normal Rare
+  zh-CN:
+  - set_number: 24SP-SC205
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
