--- a/data/cards/93946239.yaml
+++ b/data/cards/93946239.yaml
@@ -130,6 +130,11 @@ sets:
     set_name: "Structure Deck: Devil's Gate"
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC219
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Limited
   ocg: Unlimited
