--- a/data/cards/97273514.yaml
+++ b/data/cards/97273514.yaml
@@ -171,6 +171,11 @@ sets:
     set_name: LINK VRAINS Pack
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: 24SP-SC215
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
