--- a/data/cards/98012938.yaml
+++ b/data/cards/98012938.yaml
@@ -111,6 +111,11 @@ sets:
     set_name: 'Booster SP: Raging Masters'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: 24SP-SC213
+    set_name: Entry Pack 2024 Vol.2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
