--- a/rush.yaml
+++ b/rush.yaml
@@ -139322,6 +139322,7 @@ sets:
   - set_number: RD/ORP2-JP077
     set_name: Over Rush Pack 2
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
