--- a/data/cards/46533533.yaml
+++ b/data/cards/46533533.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A lil' cutie inside a glass flask, who is said to bring good luck to its contractor. However, the stopper must never be pulled out. No matter what, you must never, ever, ever...
+    A lil' cutie inside a glass flask, said to bring good luck to its contractor. However, the stopper must never be pulled out. No matter what, you must never, ever, ever...
   de:
   es:
   fr:
