--- a/data/cards/64681432.yaml
+++ b/data/cards/64681432.yaml
@@ -181,6 +181,10 @@ sets:
     set_name: Legacy of Destruction
     rarities:
     - Common
+  - set_number: LEDE-SCS01
+    set_name: Legacy of Destruction +1 Bonus Pack
+    rarities:
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
