--- a/data/rush/18363.yaml
+++ b/data/rush/18363.yaml
@@ -74,6 +74,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: RD/ORP2-JP002
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/ORP1-KR034
     set_name: Over Rush Pack
