--- a/rush.yaml
+++ b/rush.yaml
@@ -88292,6 +88292,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: RD/ORP2-JP002
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/ORP1-KR034
     set_name: Over Rush Pack
@@ -110672,6 +110676,10 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: RD/ORP2-JP003
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/TB01-KR064
     set_name: 'Triple Build Pack: Godbreath Wing'
