--- a/rush.yaml
+++ b/rush.yaml
@@ -14298,7 +14298,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: AmusiPerformer-RDSBD4-JP-C.png
+  image: AmusiPerformer-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/CP01-JP031
@@ -25649,7 +25649,7 @@ series:
 - Talismanic
 images:
 - index: 1
-  image: SakakazetheTalismanicWarrior-RDSBD3-JP-C.png
+  image: SakakazetheTalismanicWarrior-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/KP04-JP038
@@ -48242,7 +48242,7 @@ atk: 1500
 def: 1200
 images:
 - index: 1
-  image: Takriminos-RDKP07-JP-R.png
+  image: Takriminos-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP002
@@ -52792,7 +52792,7 @@ series:
 - Talismanic
 images:
 - index: 1
-  image: DoumatheTalismanicSupremeSage-RDSJMP-JP-NPR.png
+  image: DoumatheTalismanicSupremeSage-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/SJMP-JP011
@@ -54597,7 +54597,7 @@ series:
 - Talismanic
 images:
 - index: 1
-  image: KarataketheTalismanicWarrior-RDGRP1-JP-C.png
+  image: KarataketheTalismanicWarrior-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/GRP1-JP038
@@ -94446,7 +94446,7 @@ series:
 - Cat
 images:
 - index: 1
-  image: StarCatStraynya-RDKP12-JP-C.png
+  image: StarCatStraynya-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP036
@@ -94711,7 +94711,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: AltierratheSkysaviorTransience-RDKP12-JP-R.png
+  image: AltierratheSkysaviorTransience-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP039
