--- a/data/cards/00102380.yaml
+++ b/data/cards/00102380.yaml
@@ -106,6 +106,10 @@ sets:
     set_name: Duel Terminal 3
     rarities:
     - Duel Terminal Super Parallel Rare
+  - set_number: STP7-EN018
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   de:
   - set_number: DR1-DE051
     set_name: Dark Revelation Volume 1
