--- a/data/cards/10375182.yaml
+++ b/data/cards/10375182.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: STP7-EN008
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Super Rare
   de:
   - set_number: CT1-DE003
     set_name: Collectible Tins 2004
