--- a/data/cards/27125110.yaml
+++ b/data/cards/27125110.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: Pharaoh's Servant
     rarities:
     - Short Print
+  - set_number: STP7-EN016
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   - set_number: PSV-E083
     set_name: Pharaoh's Servant
     rarities:
