--- a/data/cards/37957847.yaml
+++ b/data/cards/37957847.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: Invasion of Chaos
     rarities:
     - Ultra Rare
+  - set_number: STP7-EN010
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Super Rare
   de:
   - set_number: DR2-DE081
     set_name: Dark Revelation Volume 2
