--- a/data/cards/41426869.yaml
+++ b/data/cards/41426869.yaml
@@ -97,6 +97,10 @@ sets:
     set_name: Dark Legends
     rarities:
     - Common
+  - set_number: STP7-EN025
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   - set_number: MRL-E051
     set_name: Spell Ruler
     rarities:
