--- a/data/cards/46565218.yaml
+++ b/data/cards/46565218.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Common
+  - set_number: STP7-EN023
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   de:
   - set_number: AC14-DE024
     set_name: Yu-Gi-Oh! Advent Calendar ZEXAL Edition
