--- a/data/cards/56747793.yaml
+++ b/data/cards/56747793.yaml
@@ -94,6 +94,10 @@ sets:
     set_name: Duel Terminal 3
     rarities:
     - Duel Terminal Normal Parallel Rare
+  - set_number: STP7-EN012
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Super Rare
   - set_number: LON-E049
     set_name: Labyrinth of Nightmare
     rarities:
