--- a/data/cards/63519819.yaml
+++ b/data/cards/63519819.yaml
@@ -103,6 +103,10 @@ sets:
     set_name: Duelist League Series 1 participation cards
     rarities:
     - Super Rare
+  - set_number: STP7-EN003
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Ultra Rare
   - set_number: PSV-E084
     set_name: Pharaoh's Servant
     rarities:
