--- a/data/cards/81439173.yaml
+++ b/data/cards/81439173.yaml
@@ -148,6 +148,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Destruction'
     rarities:
     - Common
+  - set_number: STP7-EN004
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Ultra Rare
   de:
   - set_number: SDRL-DE020
     set_name: Rise of the Dragon Lords Structure Deck
