--- a/data/cards/93260132.yaml
+++ b/data/cards/93260132.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP7-EN013
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Super Rare
   de:
   - set_number: SDZW-DE018
     set_name: Zombie World Structure Deck
