--- a/data/cards/26905245.yaml
+++ b/data/cards/26905245.yaml
@@ -91,6 +91,10 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: STP7-EN014
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Super Rare
   de:
   - set_number: PTDN-DE094
     set_name: Phantom Darkness
