--- a/data/cards/35539880.yaml
+++ b/data/cards/35539880.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: STP7-EN015
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Super Rare
   de:
   - set_number: STON-DE057
     set_name: Strike of Neos
