--- a/data/cards/38670435.yaml
+++ b/data/cards/38670435.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: Invasion of Chaos
     rarities:
     - Ultra Rare
+  - set_number: STP7-EN019
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   de:
   - set_number: DR2-DE076
     set_name: Dark Revelation Volume 2
