--- a/data/cards/60229110.yaml
+++ b/data/cards/60229110.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP7-EN020
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   de:
   - set_number: FET-DE009
     set_name: Flaming Eternity
