--- a/data/cards/72580321.yaml
+++ b/data/cards/72580321.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP7-EN022
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   de:
   - set_number: REDU-DE035
     set_name: Return of the Duelist
