--- a/data/cards/73752131.yaml
+++ b/data/cards/73752131.yaml
@@ -92,6 +92,10 @@ sets:
     set_name: Magician's Force
     rarities:
     - Super Rare
+  - set_number: STP7-EN009
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Super Rare
   de:
   - set_number: DR1-DE120
     set_name: Dark Revelation Volume 1
