--- a/data/cards/77585513.yaml
+++ b/data/cards/77585513.yaml
@@ -137,6 +137,10 @@ sets:
     set_name: Speed Duel Remote Duel Extravaganza Main Event prize cards
     rarities:
     - Ultra Rare
+  - set_number: STP7-EN007
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Super Rare
   - set_number: PSV-E000
     set_name: Pharaoh's Servant
     rarities:
