--- a/data/cards/11925569.yaml
+++ b/data/cards/11925569.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: STP7-EN031
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   de:
   - set_number: SD09-DE028
     set_name: "Structure Deck: Dinosaur's Rage"
