--- a/data/cards/19230407.yaml
+++ b/data/cards/19230407.yaml
@@ -95,6 +95,10 @@ sets:
     set_name: Duel Terminal 2
     rarities:
     - Duel Terminal Normal Parallel Rare
+  - set_number: STP7-EN026
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   - set_number: LON-E051
     set_name: Labyrinth of Nightmare
     rarities:
