--- a/data/cards/26864586.yaml
+++ b/data/cards/26864586.yaml
@@ -39,6 +39,10 @@ property: Normal
 images:
 - index: 1
   image: ResonanceDevice-GENF-EN-R-UE.png
+  illustration: ResonanceDevice-MADU-EN-VG-artwork.png
+- index: '1.1'
+  image: ResonanceDevice-GENF-JP-R.jpg
+  illustration: ResonanceDevice-MADU-JP-VG-artwork.png
 sets:
   en:
   - set_number: GENF-EN061
