--- a/data/cards/49328340.yaml
+++ b/data/cards/49328340.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP7-EN028
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   de:
   - set_number: FET-DE043
     set_name: Flaming Eternity
