--- a/data/cards/55713623.yaml
+++ b/data/cards/55713623.yaml
@@ -90,6 +90,10 @@ sets:
     set_name: Shonen Jump Championship 2006 Prize Card
     rarities:
     - Ultra Rare
+  - set_number: STP7-EN027
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   - set_number: PT02-EN001
     set_name: Pharaoh Tour 2006 Final prize card
     rarities:
