--- a/data/cards/73872164.yaml
+++ b/data/cards/73872164.yaml
@@ -50,6 +50,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP7-EN032
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   de:
   - set_number: STON-DE052
     set_name: Strike of Neos
