--- a/data/cards/88494120.yaml
+++ b/data/cards/88494120.yaml
@@ -50,6 +50,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP7-EN033
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   de:
   - set_number: BP03-DE234
     set_name: 'Battle Pack 3: Monster League'
