--- a/data/cards/96008713.yaml
+++ b/data/cards/96008713.yaml
@@ -79,6 +79,10 @@ sets:
     set_name: Duel Terminal 2
     rarities:
     - Duel Terminal Normal Parallel Rare
+  - set_number: STP7-EN030
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   de:
   - set_number: TP8-DE001
     set_name: Tournament Pack 8
