--- a/data/rush/20179.yaml
+++ b/data/rush/20179.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20179
 name:
   en: Sky Emperor Minion
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカードを４枚めくり、お互いに確認する。自分はその中から「スペース・ユグドラゴ」またはマキシマムモンスター（サイバース族）１体を選んで手札に加える事ができる。残りのカードを好きな順番でデッキの上に戻す。
   ko:
   zh-TW:
   zh-CN:
