--- a/data/cards/55312487.yaml
+++ b/data/cards/55312487.yaml
@@ -40,7 +40,11 @@ series:
 - Crusadia
 images:
 - index: 1
+  image: CrusadiaVanguard-CYHO-JP-C.png
+  illustration: CrusadiaVanguard-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: CrusadiaVanguard-MP19-EN-C-1E.png
+  illustration: CrusadiaVanguard-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CYHO-EN071
