--- a/data/cards/69039982.yaml
+++ b/data/cards/69039982.yaml
@@ -40,7 +40,11 @@ series:
 - Crusadia
 images:
 - index: 1
+  image: CrusadiaRevival-CYHO-JP-C.png
+  illustration: CrusadiaRevival-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: CrusadiaRevival-MP19-EN-R-1E.png
+  illustration: CrusadiaRevival-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CYHO-EN054
