--- a/data/cards/87497553.yaml
+++ b/data/cards/87497553.yaml
@@ -62,7 +62,11 @@ series:
 - Crusadia
 images:
 - index: 1
+  image: CrusadiaTestament-DANE-JP-C.png
+  illustration: CrusadiaTestament-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: CrusadiaTestament-MP20-EN-R-1E.png
+  illustration: CrusadiaTestament-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DANE-EN061
