--- a/data/cards/91646304.yaml
+++ b/data/cards/91646304.yaml
@@ -44,7 +44,11 @@ series:
 - Crusadia
 images:
 - index: 1
+  image: CrusadiaArboria-CYHO-JP-C.png
+  illustration: CrusadiaArboria-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: CrusadiaArboria-MP19-EN-SR-1E.png
+  illustration: CrusadiaArboria-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CYHO-EN007
