--- a/data/rush/18680.yaml
+++ b/data/rush/18680.yaml
@@ -62,6 +62,10 @@ sets:
     - Common
     - Super Rare
     - Ultra Rare
+  - set_number: RD/ORP2-JP081
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/LGP1-KR000
     set_name: Legend Awakening Pack
