--- a/data/rush/19948.yaml
+++ b/data/rush/19948.yaml
@@ -55,4 +55,8 @@ sets:
     set_name: Transamu of Transcendence
     rarities:
     - Over Rush Rare
+  - set_number: RD/ORP2-JP082
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
 yugipedia_page_id: 1042437
