--- a/data/cards/59042331.yaml
+++ b/data/cards/59042331.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Durante o Cálculo de Dano, você pode enviar esta carta da sua mão ao Cemitério para prevenir que o monstro que você controla seja destruído nesta batalha. Entretanto, o ATK daquele monstro é reduzido pela metade até a End Phase.
   ja: |-
-    戦闘ダメージ計算時、このカードを手札から墓地へ送って発動する。自分フィールド上に存在するモンスターはその戦闘では破壊されず、攻撃力はこのターンのエンドフェイズ時まで半分になる。
+    自分フィールド上のモンスターが戦闘を行うダメージ計算時、このカードを手札から墓地へ送って発動できる。その自分のモンスターはその戦闘では破壊されず、エンドフェイズ時まで攻撃力は半分になる。
   ko: |-
     ①: 자신 몬스터가 전투를 실행하는 데미지 계산시, 이 카드를 패에서 묘지로 보내고 발동할 수 있다. 그 자신 몬스터는 그 전투로는 파괴되지 않으며, 턴 종료시까지 공격력은 절반이 된다.
   zh-TW: |-
