--- a/rush.yaml
+++ b/rush.yaml
@@ -97102,6 +97102,10 @@ sets:
     - Common
     - Super Rare
     - Ultra Rare
+  - set_number: RD/ORP2-JP081
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/LGP1-KR000
     set_name: Legend Awakening Pack
@@ -130186,6 +130190,10 @@ sets:
     set_name: Transamu of Transcendence
     rarities:
     - Over Rush Rare
+  - set_number: RD/ORP2-JP082
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
 yugipedia_page_id: 1042437
 ---
 konami_id: 19949
