--- a/data/rush/17505.yaml
+++ b/data/rush/17505.yaml
@@ -50,7 +50,7 @@ series:
 - Jointech
 images:
 - index: 1
-  image: JointechRex-RDGRD2-JP-NPR.png
+  image: JointechRex-RDORP2-JP-C.png
   illustration: JointechRex-G002-JP-VG-artwork.png
 - index: 2
   image: JointechRex-RD711B-JP-NPR.png
@@ -83,6 +83,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
   ko:
   - set_number: RD/KP09-KR019
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
