--- a/data/rush/18701.yaml
+++ b/data/rush/18701.yaml
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: DragonTribeFusion-RDLGP1-JP-R.png
+  image: DragonTribeFusion-RDORP2-JP-C.png
 - index: 2
   image: DragonTribeFusion-RDS23P-JP-UPR.png
 sets:
@@ -61,6 +61,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
   ko:
   - set_number: RD/LGP1-KR024
     set_name: Legend Awakening Pack
