--- a/data/rush/yugipedia1043815.yaml
+++ b/data/rush/yugipedia1043815.yaml
@@ -42,13 +42,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveProtection-RDORP2-JP-OP.png
+  image: LoveProtection-RDORP2-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP052
     set_name: Over Rush Pack 2
     rarities:
     - Ultra Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
