--- a/data/rush/15907.yaml
+++ b/data/rush/15907.yaml
@@ -58,7 +58,7 @@ series:
 - Tron
 images:
 - index: 1
-  image: PeacockPicotron-RDSBD6-JP-C.png
+  image: PeacockPicotron-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX1-JP013
@@ -73,6 +73,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
   ko:
   - set_number: RD/MAX1-KR013
     set_name: Maximum Ultra Enhancement Pack
