--- a/data/rush/15908.yaml
+++ b/data/rush/15908.yaml
@@ -40,7 +40,7 @@ series:
 - Tron
 images:
 - index: 1
-  image: Femtron-RDSBD6-JP-C.png
+  image: Femtron-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX1-JP014
@@ -55,6 +55,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
   ko:
   - set_number: RD/MAX1-KR014
     set_name: Maximum Ultra Enhancement Pack
