--- a/data/rush/18680.yaml
+++ b/data/rush/18680.yaml
@@ -49,7 +49,7 @@ series:
 - Red-Eyes
 images:
 - index: 1
-  image: MeteorBlackDragon-RDLGP1-JP-ORR.png
+  image: MeteorBlackDragon-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/LGP1-JP000
@@ -66,6 +66,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/LGP1-KR000
     set_name: Legend Awakening Pack
