--- a/data/rush/19948.yaml
+++ b/data/rush/19948.yaml
@@ -48,7 +48,7 @@ series:
 - Red-Eyes
 images:
 - index: 1
-  image: BlackSkullDragon-RDKP16-JP-ORR.png
+  image: BlackSkullDragon-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP16-JP000
@@ -59,4 +59,5 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Ultra Parallel Rare
 yugipedia_page_id: 1042437
