--- a/data/rush/yugipedia1043808.yaml
+++ b/data/rush/yugipedia1043808.yaml
@@ -46,13 +46,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveÁngel-RDORP2-JP-OP.png
+  image: LoveÁngel-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP041
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
