--- a/data/rush/yugipedia1043816.yaml
+++ b/data/rush/yugipedia1043816.yaml
@@ -42,13 +42,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveMemory-RDORP2-JP-OP.png
+  image: LoveMemory-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP054
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
