--- a/data/rush/yugipedia1044315.yaml
+++ b/data/rush/yugipedia1044315.yaml
@@ -42,13 +42,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveReturn-RDORP2-JP-OP.png
+  image: LoveReturn-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP2-JP055
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
