--- a/data/rush/yugipedia1044858.yaml
+++ b/data/rush/yugipedia1044858.yaml
@@ -34,11 +34,12 @@ series:
 - Magnet Warrior
 images:
 - index: 1
-  image: GammaTheMagnetWarrior-RDORP2-JP-OP.png
+  image: GammaTheMagnetWarrior-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP031
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Ultra Parallel Rare
 yugipedia_page_id: 1044858
