--- a/data/rush/yugipedia1045997.yaml
+++ b/data/rush/yugipedia1045997.yaml
@@ -46,13 +46,14 @@ series:
 - Tron
 images:
 - index: 1
-  image: ChaosFemtron-RDORP2-JP-OP.png
+  image: ChaosFemtron-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP2-JP012
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
