--- a/data/rush/yugipedia1046287.yaml
+++ b/data/rush/yugipedia1046287.yaml
@@ -58,13 +58,14 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: SuperGraphagasVaporLancer-RDORP2-JP-OP.png
+  image: SuperGraphagasVaporLancer-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP063
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
