--- a/data/rush/yugipedia1046730.yaml
+++ b/data/rush/yugipedia1046730.yaml
@@ -34,11 +34,12 @@ def: 3000
 legend: true
 images:
 - index: 1
-  image: LabyrinthWall-RDORP2-JP-OP.png
+  image: LabyrinthWall-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP2-JP080
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Ultra Parallel Rare
 yugipedia_page_id: 1046730
