--- a/data/rush/yugipedia1048633.yaml
+++ b/data/rush/yugipedia1048633.yaml
@@ -58,13 +58,14 @@ series:
 - Transamu
 images:
 - index: 1
-  image: TransamuPowerRainac-RDORP2-JP-OP.png
+  image: TransamuPowerRainac-RDORP2-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP058
     set_name: Over Rush Pack 2
     rarities:
     - Ultra Rare
+    - Secret Rare
   - set_number: RD/ORP2-JP058
     set_name: Yu-Gi-Oh! GO RUSH!! Complete Challenge 5
     rarities:
