--- a/data/rush/yugipedia1052173.yaml
+++ b/data/rush/yugipedia1052173.yaml
@@ -46,13 +46,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveWolf-RDORP2-JP-OP.png
+  image: LoveWolf-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP2-JP046
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
