--- a/rush.yaml
+++ b/rush.yaml
@@ -19489,7 +19489,7 @@ series:
 - Tron
 images:
 - index: 1
-  image: PeacockPicotron-RDSBD6-JP-C.png
+  image: PeacockPicotron-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX1-JP013
@@ -19504,6 +19504,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
   ko:
   - set_number: RD/MAX1-KR013
     set_name: Maximum Ultra Enhancement Pack
@@ -19557,7 +19558,7 @@ series:
 - Tron
 images:
 - index: 1
-  image: Femtron-RDSBD6-JP-C.png
+  image: Femtron-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX1-JP014
@@ -19572,6 +19573,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
   ko:
   - set_number: RD/MAX1-KR014
     set_name: Maximum Ultra Enhancement Pack
@@ -61780,7 +61782,7 @@ series:
 - Jointech
 images:
 - index: 1
-  image: JointechRex-RDGRD2-JP-NPR.png
+  image: JointechRex-RDORP2-JP-C.png
   illustration: JointechRex-G002-JP-VG-artwork.png
 - index: 2
   image: JointechRex-RD711B-JP-NPR.png
@@ -61813,6 +61815,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
   ko:
   - set_number: RD/KP09-KR019
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
@@ -73633,7 +73636,7 @@ series:
 - High Tech Dragon
 images:
 - index: 1
-  image: BlueToothBurstDragon-RDKP10-JP-UR.png
+  image: BlueToothBurstDragon-RDORP2-JP-C.png
   illustration: BlueToothBurstDragon-G002-JP-VG-artwork.png
 - index: 2
   image: BlueToothBurstDragon-RD711B-JP-NPR.png
@@ -73658,6 +73661,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
   ko:
   - set_number: RD/KP10-KR017
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
@@ -97089,7 +97093,7 @@ series:
 - Red-Eyes
 images:
 - index: 1
-  image: MeteorBlackDragon-RDLGP1-JP-ORR.png
+  image: MeteorBlackDragon-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/LGP1-JP000
@@ -97106,6 +97110,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/LGP1-KR000
     set_name: Legend Awakening Pack
@@ -98639,7 +98644,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: DragonTribeFusion-RDLGP1-JP-R.png
+  image: DragonTribeFusion-RDORP2-JP-C.png
 - index: 2
   image: DragonTribeFusion-RDS23P-JP-UPR.png
 sets:
@@ -98656,6 +98661,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
   ko:
   - set_number: RD/LGP1-KR024
     set_name: Legend Awakening Pack
@@ -130183,7 +130189,7 @@ series:
 - Red-Eyes
 images:
 - index: 1
-  image: BlackSkullDragon-RDKP16-JP-ORR.png
+  image: BlackSkullDragon-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP16-JP000
@@ -130194,6 +130200,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Ultra Parallel Rare
 yugipedia_page_id: 1042437
 ---
 konami_id: 19949
@@ -135682,13 +135689,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveÁngel-RDORP2-JP-OP.png
+  image: LoveÁngel-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP041
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -135807,13 +135815,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveAnela-RDORP2-JP-OP.png
+  image: LoveAnela-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP043
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -135869,13 +135878,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveDove-RDORP2-JP-OP.png
+  image: LoveDove-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP2-JP047
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -135986,13 +135996,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveLetter-RDORP2-JP-OP.png
+  image: LoveLetter-RDORP2-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP050
     set_name: Over Rush Pack 2
     rarities:
     - Ultra Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -136044,13 +136055,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveSafety-RDORP2-JP-OP.png
+  image: LoveSafety-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP2-JP051
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -136102,13 +136114,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveProtection-RDORP2-JP-OP.png
+  image: LoveProtection-RDORP2-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP052
     set_name: Over Rush Pack 2
     rarities:
     - Ultra Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -136160,13 +136173,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveMemory-RDORP2-JP-OP.png
+  image: LoveMemory-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP054
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -136218,13 +136232,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveReturn-RDORP2-JP-OP.png
+  image: LoveReturn-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP2-JP055
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -136280,13 +136295,14 @@ series:
 - Magnet Warrior
 images:
 - index: 1
-  image: ProtoriontheMagnaWarrior-RDORP2-JP-OP.png
+  image: ProtoriontheMagnaWarrior-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP028
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -136330,13 +136346,14 @@ series:
 - Magnet Warrior
 images:
 - index: 1
-  image: AlphaTheMagnetWarrior-RDORP2-JP-OP.png
+  image: AlphaTheMagnetWarrior-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP029
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Ultra Parallel Rare
 yugipedia_page_id: 1044856
 ---
 konami_id:
@@ -136375,13 +136392,14 @@ series:
 - Magnet Warrior
 images:
 - index: 1
-  image: BetaTheMagnetWarrior-RDORP2-JP-OP.png
+  image: BetaTheMagnetWarrior-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP030
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Ultra Parallel Rare
 yugipedia_page_id: 1044857
 ---
 konami_id:
@@ -136420,13 +136438,14 @@ series:
 - Magnet Warrior
 images:
 - index: 1
-  image: GammaTheMagnetWarrior-RDORP2-JP-OP.png
+  image: GammaTheMagnetWarrior-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP031
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Ultra Parallel Rare
 yugipedia_page_id: 1044858
 ---
 konami_id:
@@ -136477,13 +136496,14 @@ series:
 - Magnet Warrior
 images:
 - index: 1
-  image: AlphaTheEternalMagnetWarrior-RDORP2-JP-OP.png
+  image: AlphaTheEternalMagnetWarrior-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP032
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -136539,13 +136559,14 @@ series:
 - Magnet Warrior
 images:
 - index: 1
-  image: BetaTheEternalMagnetWarrior-RDORP2-JP-OP.png
+  image: BetaTheEternalMagnetWarrior-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP033
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -136601,13 +136622,14 @@ series:
 - Magnet Warrior
 images:
 - index: 1
-  image: GammaTheEternalMagnetWarrior-RDORP2-JP-OP.png
+  image: GammaTheEternalMagnetWarrior-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP034
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -137571,13 +137593,14 @@ series:
 - Space
 images:
 - index: 1
-  image: MultiSpaceYggdrago-RDORP2-JP-OP.png
+  image: MultiSpaceYggdrago-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP010
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -137633,13 +137656,14 @@ series:
 - Tron
 images:
 - index: 1
-  image: ChaosFemtron-RDORP2-JP-OP.png
+  image: ChaosFemtron-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP2-JP012
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -137815,13 +137839,14 @@ series:
 - Space
 images:
 - index: 1
-  image: SpaceCall-RDORP2-JP-OP.png
+  image: SpaceCall-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP018
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -138252,13 +138277,14 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: SuperGraphagasVaporLancer-RDORP2-JP-OP.png
+  image: SuperGraphagasVaporLancer-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP063
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -138358,13 +138384,14 @@ def: 3000
 legend: true
 images:
 - index: 1
-  image: LabyrinthWall-RDORP2-JP-OP.png
+  image: LabyrinthWall-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP2-JP080
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Ultra Parallel Rare
 yugipedia_page_id: 1046730
 ---
 konami_id:
@@ -138411,13 +138438,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveStudy-RDORP2-JP-OP.png
+  image: LoveStudy-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP049
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -138675,13 +138703,14 @@ series:
 - Transamu
 images:
 - index: 1
-  image: TransamuPowerRainac-RDORP2-JP-OP.png
+  image: TransamuPowerRainac-RDORP2-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP058
     set_name: Over Rush Pack 2
     rarities:
     - Ultra Rare
+    - Secret Rare
   - set_number: RD/ORP2-JP058
     set_name: Yu-Gi-Oh! GO RUSH!! Complete Challenge 5
     rarities:
@@ -139744,13 +139773,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveMillion-RDORP2-JP-OP.png
+  image: LoveMillion-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP053
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -139806,13 +139836,14 @@ series:
 - Love
 images:
 - index: 1
-  image: LoveWolf-RDORP2-JP-OP.png
+  image: LoveWolf-RDORP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP2-JP046
     set_name: Over Rush Pack 2
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -139919,13 +139950,14 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: StrangeAttractor-RDORP2-JP-OP.png
+  image: StrangeAttractor-RDORP2-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP017
     set_name: Over Rush Pack 2
     rarities:
     - Ultra Rare
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -140027,13 +140059,14 @@ series:
 - Bubble Actress
 images:
 - index: 1
-  image: MaizefulCharity-RDORP2-JP-OP.png
+  image: MaizefulCharity-RDORP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP076
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -140085,12 +140118,13 @@ series:
 - Magnet Warrior
 images:
 - index: 1
-  image: MagnetThunderCharge-RDORP2-JP-OP.png
+  image: MagnetThunderCharge-RDORP2-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP2-JP035
     set_name: Over Rush Pack 2
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
