--- a/data/rush/19972.yaml
+++ b/data/rush/19972.yaml
@@ -54,6 +54,10 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: RD/BDG8-JP001
+    set_name: Yu-Gi-Oh! GO RUSH!! Duel-8 Blu-ray & DVD promotional card
+    rarities:
+    - Ultra Parallel Rare
 is_translation_unofficial:
   name:
     en: true
